--- a/index.html
+++ b/index.html
@@ -262,16 +262,19 @@
             </div>
 		</article>
 		<article id="together" class="panel secondary inactive" style="display: none;">
-		    <div class="content content1">
-		        <!-- <div class="inner"> -->
-		            <div class="headertl" >
-		            	<h1><b>一起<br>走过的<br>路</b></h1>
-		            </div>
+		    <div class="image" style="background-position: center center;">
+				<img src="https://s1.328888.xyz/2022/05/12/qeGmF.jpg" alt="" data-position="center center" style="display: none;">
+			</div>
+		           
+			<div class="content">
 		            <ul class="actions spinX">
 		                <li><a href="#home" class="button small back">返回</a>
 		                </li>
 		            </ul>
 					<div class="inner">
+						<header>
+							<h2>一起走过的路</h2>
+						</header>
 						<ul>
 						<li>一起吃饭</li>
 						<li>一起散步在晚上的校园</li>
