--- a/index.html
+++ b/index.html
@@ -335,6 +335,23 @@
 							</div>
 						</div>
 
+                        <div class="cd-timeline-block">
+							<div class="cd-timeline-img cd-location">
+							</div>        
+							<div class="cd-timeline-content">
+								<h2>雨天出行</h2>
+								<p>
+									吃炒年糕和炒米粉和下雨天更配哦<br>
+									遇到了新疆老乡！真是不错！<br>
+									阿姨非常热情，让人感觉在家一样<br>
+									下次一定还去拜访她，吃炒年糕！！<br>
+									雨中漫步真的很美,一起散步也是，笑得好开心<br>
+									<img src="https://s1.328888.xyz/2022/06/05/WMc6m.jpg" width=75%/>
+								</p>
+								<span class="cd-date">2022.6.4</span>
+							</div>
+						</div>
+
 						<div class="cd-timeline-block">
 							<div class="cd-timeline-img cd-location">
 							</div>        
@@ -372,6 +389,7 @@
 						<li>一起看电影</li>
 						<li>一起喝酒</li>
                         <li>一起去买衣服</li>
+                        <li>一起雨中漫步</li>
 						<li>一起看日出</li>
 						<li>一起去乌镇</li>
 						<li>一起去看海</li>
