--- a/index.html
+++ b/index.html
@@ -597,6 +597,23 @@
 							</div>
 						</div>
 
+                        <div class="cd-timeline-block">
+							<div class="cd-timeline-img cd-location">
+							</div>        
+							<div class="cd-timeline-content">
+								<h1>好久没有更新</h1>
+								<p>
+									好久没有更新，说声抱歉<br>
+									最近的我太敏感了<br>
+									有点太注重自己了<br>
+									希望军训结束能好转<br>
+									希望扎扎能好好吃饭<br>
+									不会因为天气太难受<br>
+								</p>
+								<span class="cd-date">2022.3.21</span>
+							</div>
+						</div>
+                        
 						<div class="cd-timeline-block">
 							<div class="cd-timeline-img cd-location">
 							</div>        
