--- a/index.html
+++ b/index.html
@@ -609,11 +609,50 @@
 									希望军训结束能好转<br>
 									希望扎扎能好好吃饭<br>
 									不会因为天气太难受<br>
+                                    我们会更好<br>
 								</p>
 								<span class="cd-date">2022.6.28</span>
 							</div>
 						</div>
                         
+                        <div class="cd-timeline-block">
+							<div class="cd-timeline-img cd-location">
+							</div>        
+							<div class="cd-timeline-content">
+								<h1>回看之前的故事</h1>
+								<p>
+									回看之前的故事<br>
+									回想之前的一切<br>
+									觉得一路走来<br>
+									很是感慨<br>
+									希望我们以后能够越来越好<br>
+									眼泪不争气的流下来<br>
+								</p>
+								<span class="cd-date">2023.9.20</span>
+							</div>
+						</div>
+						
+						<div class="cd-timeline-block">
+							<div class="cd-timeline-img cd-location">
+							</div>        
+							<div class="cd-timeline-content">
+								<h1>一年六个月！！！</h1>
+								<p>
+									这一年半我们经历了好多快乐的时光<br>
+									即使有一些困难<br>
+									但我们心意还相连<br>
+									终于还是克服啦<br>
+									还记得那天晚上<br>
+									女主追回了她的王子<br>
+									男主等到了他的公主<br>
+									希望我们以后能更好!!!<br>
+									我们一定能更好！！！<br>
+									我爱你，如磐石般坚毅<br>
+								</p>
+								<span class="cd-date">2023.9.21</span>
+							</div>
+						</div>
+
 						<div class="cd-timeline-block">
 							<div class="cd-timeline-img cd-location">
 							</div>        
@@ -656,17 +695,18 @@
 						<li>一起去草原</li>
 						<li>一起去厦大武大</li>
 						<li>一起去兵马俑</li>
+                        <li>一直一起</li>
 						<li>未完待续</li>
 						</ul>
 					</div>
 				</div>
 		</article>
-        <footer id="footer" class="">
-            <p class="copyright">2022 — 未来 <a target="_blank" href="你的coding page链接">&copy;❤扎扎</a></p>
-            <p class="copyright">遇见的第<span id="t_d"></span>
-                <span id="t_h"></span>
-                <span id="t_m"></span>
-                <span id="t_s"></span>
+        <footer id="footer" class="" >
+            <p class="copyright" style="color: transparent;"><b>2022 — 未来 <a target="_blank" href="你的coding page链接">&copy;❤扎扎</a></b></p>
+            <p class="copyright" style="color: transparent;"><b>遇见的第<span id="t_d"></span></b>
+                <b><span id="t_h"></span></b>
+				<b><span id="t_m"></span></b>
+				<b><span id="t_s"></span></b>
             </p>
         </footer>
     </div>
