--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
 							<div class="cd-timeline-img cd-location">
 							</div>        
 							<div class="cd-timeline-content">
-								<h1>一年九个月，610天</h1>
+								<h1>一年八个月，610天</h1>
 								<p>
 									两个月没更新啦，最近有点懒<br>
 									还记得生日那天，10.25<br>
